--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CS 2340 Project 1</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_classes">Classes</string>
+    <string name="title_upcoming">Upcoming</string>
+    <string name="title_to_do">To Do</string>
 </resources>
