--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_classes">Classes</string>
     <string name="title_upcoming">Upcoming</string>
     <string name="title_to_do">To Do</string>
+    <string name="sort_by">Sort by</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
